(test
  (name basic_step_test)
  (modules basic_step_test)
  (libraries basicPfx))

(test
  (name compile_test)
  (modules compile_test)
  (libraries basicPfx))

(test
  (name fun_test)
  (modules fun_test)
  (libraries funPfx))

(test
  (name fun_step_test)
  (modules fun_step_test)
  (libraries funPfx))